upload to heroku update

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # MongoDB variables
-MONGO_URI=mongodb://localhost:27017/recab
+MONGO_URI=mongodb+srv://abarcosltd:qVxmHhAQV2xwyriT@cluster0.utywtgp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # MYSQL 
 MYSQL_HOST=localhost
